--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 SECRET_KEY = 'django-insecure-k0i)2+oic3%y4285@@ri0=d5(5m289wt2ad3=xk2&6v((=4f7r'
+NAME = 'haroffblog'
+USER = 'postgres'
+PASSWORD = '12Facebook@6'
+HOST = 'localhost'
+PORT = 5432
