--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,40 @@
+arrow==1.2.1
 asgiref==3.4.1
+backports.zoneinfo==0.2.1
+binaryornot==0.4.4
 bleach==4.1.0
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.10
+click==8.0.3
+colorama==0.4.4
+cookiecutter==1.7.3
+dj-database-url==0.5.0
 Django==3.2.9
+django-browser-reload==1.3.0
 django-cors-headers==3.10.0
 django-summernote==0.8.20.0
+django-tailwind==3.1.1
 djangorestframework==3.12.4
+gunicorn==20.1.0
+idna==3.3
+Jinja2==3.0.3
+jinja2-time==0.2.0
+MarkupSafe==2.0.1
 packaging==21.3
 Pillow==8.4.0
+poyo==0.5.0
 psycopg2==2.9.2
 pyparsing==3.0.6
+python-dateutil==2.8.2
 python-dotenv==0.19.2
+python-slugify==5.0.2
 pytz==2021.3
+requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
+text-unidecode==1.3
+tzdata==2021.5
+urllib3==1.26.8
 webencodings==0.5.1
+whitenoise==5.3.0
